--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ body {
     border-bottom: solid black 1px;
     gap: 10px;
     align-items: center;
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 1;
 }
 
 .navbar__s1__title {
@@ -25,17 +29,19 @@ body {
 .navbar__s2 {
     padding: 10px;
     border: solid black 1px;
-    border-radius: 10px;
+    border-radius: 15px;
     width: 60%;
     display: flex;
     gap: 10px;
     align-items: center;
+    background-color: white;
 }
 
 .navbar__s2 input {
     border: none;
     font-size: 16px;
     width: 100%;
+    background-color: transparent;
 }
 
 .navbar__s2 input {
@@ -50,6 +56,24 @@ body {
 
 }
 
+.mylearning{
+    position: relative;
+    cursor: pointer;
+}
+.mylearning__popup{
+    position: absolute;
+    background-color: white;
+    border: solid black 1px;
+    width: 100px;
+    top: 150;
+    padding: 20px;
+    right: 0;
+    display: none;
+
+}
+.mylearning:hover .mylearning__popup{
+    display: block;
+}
 .categories {
     display: flex;
     padding: 10px;
@@ -63,9 +87,21 @@ body {
     padding: 10px;
     border-radius: 30px;
 }
-
+.sale-image{
+    position: relative;
+}
 .sale-image img {
     width: 100%;
+
+}
+.sale-image__sale{
+    width: 35%;
+    border: solid black 1px;
+    background-color: white;
+    padding: 2%;
+    position: absolute;
+    top: 50%;
+    left: 8%;
 }
 
 .recommented {
