--- a/style.css
+++ b/style.css
@@ -85,7 +85,16 @@ body {
     background-color: #a435f0;
     color: white;
     padding: 10px;
+    border: solid #A435F0 1px;
     border-radius: 30px;
+    cursor: pointer;
+
+}
+.categories p:hover{
+    transition: 2sc;
+    background-color: transparent;
+    color: black;
+    border: solid #A435F0 1px;
 }
 .sale-image{
     position: relative;
@@ -100,8 +109,25 @@ body {
     background-color: white;
     padding: 2%;
     position: absolute;
-    top: 50%;
+    top: 30%;
     left: 8%;
+    animation-name:zoom;
+    animation-duration: 2s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+
+}
+@keyframes zoom {
+    0%{
+        transform: scale(0);
+        opacity: 0;
+
+    }
+    100%{
+        opacity: 1;
+        transform: scale(1);
+    }
+    
 }
 
 .recommented {
@@ -124,6 +150,9 @@ body {
 
 .course-card img {
     width: 100%;
+    flex-grow: 1;
+    flex-basis: 20%;
+    margin: 5px;
 }
 
 .topics {
