--- a/style.css
+++ b/style.css
@@ -55,6 +55,9 @@ body {
     align-items: center;
 
 }
+.navbar__s4{
+    display: none;
+}
 
 .mylearning{
     position: relative;
@@ -144,7 +147,9 @@ body {
 }
 
 .course-card {
-    width: 250px;
+flex-grow: 1;
+flex-basis: 20%;
+margin: 5px;
 
 }
 
@@ -208,4 +213,24 @@ body {
     justify-content: space-between;
     margin: 20px;
     align-items: center;
+}
+@media screen and (max-width: 800px) {
+    body{
+        font-size: 10px;
+    };
+
+}
+@media screen and (max-width: 800px) {
+    .course-card{
+        flex-basis: 40%;
+    }
+    .categories{
+        display: none;
+    }
+    .navbar__s2,.navbar__s3{
+        display: none;
+    }
+    .navbar__s4{
+        display: block;
+    }
 }
